# web-scrape-with-llm-agents

./: README.md  main.py  pyproject.toml
config/: config.yaml
src/: agents.py  llm.py  prompts.py  utils.py
